objects/CCA2_Application_Goal__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>CCA2_Account_Goal__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(  &quot;../&quot;+CCA2_Application__r.Account__c  , CCA2_Application__r.Account__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>HYPERLINK(CCA2_Application__c ,  CCA2_Application__r.Name, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA2_Account_Goal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CCA2_Account Goal</label>
        <referenceTo>CCA2_Account_Goal__c</referenceTo>
        <relationshipName>CCA2_Application_Goals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCA2_Application__c</fullName>
        <label>CCA2_Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>CCA2_Application_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <description>Goal for the Application</description>
        <formula>HYPERLINK( CCA2_Account_Goal__r.CCA2_Goal__c , CCA2_Account_Goal__r.CCA2_Goal__r.Name, &quot;_self&quot;)</formula>
        <inlineHelpText>Goal for the application</inlineHelpText>
        <label>Goal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Answered_Questions_Formula__c</fullName>
        <formula>IF( Exclude__c , 0 ,Number_of_Answered_Questions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Answered Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Answered_Questions__c</fullName>
        <label>Number of Answered Questions</label>
        <summaryFilterItems>
            <field>CCA2_Application_Goal_Score__c.Answered__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CCA2_Application_Goal_Score__c.CCA2_Application_Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>CCA2_Application_Goal_Score__c.Score__c</summarizedField>
        <summaryForeignKey>CCA2_Application_Goal_Score__c.CCA2_Application_Goal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_X_Score__c</fullName>
        <description>The final percentage match for this application to this goal</description>
        <formula>if ( Exclude__c, 0, (Total_Score__c /  CCA2_Account_Goal__r.CCA2_Goal__r.Max_Goal_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The final percentage match for this application to this goal</inlineHelpText>
        <label>Total % Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Application Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application_Name__c</columns>
        <columns>Goal_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CCA2_Application Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>